Sound Table Layout almost done. Working on buttons functionality. Created Objets SoundTable to save data from buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="instruments_desc">Play your favourite instrument</string>
     <string name="soundtable_desc">Be the producer</string>
     <string name="karaoke_desc">Sing your favourite songs</string>
+    <string name="title_sound">title</string>
 </resources>
